# codex_change

./: .codespellrc  .gitignore  AGENTS.md  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
codex-rs/: Cargo.toml  README.md  default.nix  justfile  rust-toolchain.toml
codex-rs/.cargo/: config.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-protocol/src/: export.rs  jsonrpc_lite.rs  lib.rs
codex-rs/app-server-test-client/: Cargo.toml  README.md
codex-rs/app-server-test-client/src/: main.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/src/: lib.rs
codex-rs/arg0/src/: lib.rs
codex-rs/async-utils/: Cargo.toml
codex-rs/backend-client/: Cargo.toml
codex-rs/backend-client/src/: client.rs  lib.rs  types.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
codex-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/cloud-tasks-client/src/: api.rs  http.rs  lib.rs  mock.rs
codex-rs/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  scrollable_diff.rs  ui.rs  util.rs
codex-rs/cloud-tasks/tests/: env_filter.rs
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/common/: Cargo.toml
codex-rs/common/src/: approval_presets.rs  config_override.rs  config_summary.rs  format_env_display.rs  lib.rs  model_presets.rs  oss.rs
codex-rs/core/: Cargo.toml  gpt-5.1-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_codex_prompt.md
codex-rs/core/src/: apply_patch.rs  auth.rs  bash.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_conversation.rs  codex_delegate.rs  compact.rs  compact_remote.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  exec_env.rs  exec_policy.rs  features.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  otel_init.rs  parse_command.rs  powershell.rs  project_doc.rs  response_processing.rs  safety.rs  seatbelt.rs  seatbelt_base_policy.sbpl  shell.rs  spawn.rs  (+4 more)
codex-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
codex-rs/docs/: codex_mcp_interface.md  protocol_v1.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml
codex-rs/exec-server/src/: lib.rs  main.rs  posix.rs
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/execpolicy/src/: execv_checker.rs
codex-rs/execpolicy2/: Cargo.toml  README.md
codex-rs/execpolicy2/examples/: example.codexpolicy
codex-rs/execpolicy2/src/: lib.rs  main.rs  parser.rs  policy.rs  rule.rs
codex-rs/execpolicy2/tests/: basic.rs
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: lib.rs
codex-rs/file-search/src/: lib.rs
codex-rs/keyring-store/: Cargo.toml
codex-rs/linux-sandbox/src/: linux_run_main.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/lmstudio/src/: client.rs  lib.rs
codex-rs/login/: Cargo.toml
codex-rs/login/src/: device_code_auth.rs  lib.rs  server.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_tool_config.rs  codex_tool_runner.rs  exec_approval.rs  lib.rs  message_processor.rs  outgoing_message.rs
codex-rs/mcp-types/: Cargo.toml  generate_mcp_types.py
codex-rs/mcp-types/src/: lib.rs
codex-rs/ollama/: Cargo.toml
codex-rs/ollama/src/: client.rs
codex-rs/otel/: Cargo.toml
codex-rs/otel/src/: config.rs  lib.rs  otel_event_manager.rs  otel_provider.rs
codex-rs/process-hardening/: Cargo.toml
codex-rs/process-hardening/src/: lib.rs
codex-rs/protocol/: Cargo.toml
codex-rs/protocol/src/: approvals.rs  config_types.rs  items.rs  lib.rs  models.rs  protocol.rs  user_input.rs
codex-rs/responses-api-proxy/: Cargo.toml  README.md
codex-rs/responses-api-proxy/npm/: package.json
codex-rs/responses-api-proxy/src/: lib.rs
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rmcp-client/src/: auth_status.rs  lib.rs  logging_client_handler.rs  oauth.rs  perform_oauth_login.rs  program_resolver.rs  rmcp_client.rs  utils.rs
codex-rs/rmcp-client/tests/: resources.rs
codex-rs/scripts/: create_github_release  setup-windows.ps1
codex-rs/stdio-to-uds/: Cargo.toml
codex-rs/stdio-to-uds/src/: lib.rs
codex-rs/stdio-to-uds/tests/: stdio_to_uds.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: additional_dirs.rs  app.rs  app_backtrack.rs  app_event.rs  ascii_animation.rs  chatwidget.rs  cli.rs  custom_terminal.rs  diff_render.rs  exec_command.rs  file_search.rs  history_cell.rs  insert_history.rs  key_hint.rs  lib.rs  markdown.rs  markdown_render.rs  markdown_render_tests.rs  markdown_stream.rs  model_migration.rs  oss_selection.rs  pager_overlay.rs  resume_picker.rs  selection_list.rs  session_log.rs  slash_command.rs  status_indicator_widget.rs  style.rs  terminal_palette.rs  test_backend.rs  tui.rs  update_action.rs  update_prompt.rs  updates.rs  wrapping.rs
codex-rs/tui/tests/: all.rs
codex-rs/utils/cache/: Cargo.toml
codex-rs/utils/git/: Cargo.toml  README.md
codex-rs/utils/image/: Cargo.toml
codex-rs/utils/json-to-toml/: Cargo.toml
codex-rs/utils/pty/: Cargo.toml
codex-rs/utils/readiness/: Cargo.toml
codex-rs/utils/string/: Cargo.toml
codex-rs/utils/tokenizer/: Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
codex-rs/windows-sandbox-rs/src/: acl.rs  allow.rs  audit.rs  cap.rs  env.rs  lib.rs  logging.rs  policy.rs  token.rs  (+2 more)
(+384 files in other folders)
