[package]
edition = "2024"
name = "codex-exec-server"
version = { workspace = true }

[[bin]]
name = "codex-execve-wrapper"
path = "src/bin/main_execve_wrapper.rs"

[[bin]]
name = "codex-exec-mcp-server"
path = "src/bin/main_mcp_server.rs"

[lib]
name = "codex_exec_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-core = { workspace = true }
libc = { workspace = true }
path-absolutize = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "auth",
    "elicitation",
    "base64",
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-io",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
