[package]
edition = "2024"
name = "codex-otel"
version = { workspace = true }

[lib]
doctest = false
name = "codex_otel"
path = "src/lib.rs"

[lints]
workspace = true

[features]
# Compile-time gate for OTLP support; disabled by default.
# Downstream crates can enable via `features = ["otel"]`.
default = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tonic"]

[dependencies]
chrono = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
eventsource-stream = { workspace = true }
opentelemetry = { workspace = true, features = ["logs"], optional = true }
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "http-proto",
    "http-json",
    "logs",
    "reqwest",
    "reqwest-rustls",
    "tls",
    "tls-roots",
], optional = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = [
    "logs",
    "rt-tokio",
], optional = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, optional = true, features = [
    "transport",
    "tls-native-roots",
    "tls-ring",
] }
tracing = { workspace = true }
