[package]
name = "codex-utils-cache"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
lru = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
