[package]
edition.workspace = true
name = "codex-utils-tokenizer"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-utils-cache = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
